UI : add py video feedback + Starting zone
- start of a Refactor of the js
TODO : put nicely the video on the UI

--- a/server/WebUI/page/cam.css
+++ b/server/WebUI/page/cam.css
@@ -3,6 +3,14 @@
     background: url("../assets/no_signal.png")  center;
     background-size: cover;
     animation: no_signal 10s linear infinite;
+    /*hide overflowing child*/
+    overflow: hidden;
+}
+
+#VideoStream{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @keyframes no_signal {
