--- a/server/WebUI/page/map.css
+++ b/server/WebUI/page/map.css
@@ -7,6 +7,7 @@
 .map .rob{
     position: relative;
     transform: translate(200px, 500px) rotate(0deg);
+    transition: all 0.5s linear;
     /*animation: rob 15s linear infinite;*/
 }
 .map .bad{
